--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -247,6 +247,8 @@
 </li>
         <li><a href="generated/ramp_database.model.WorkflowElementType.html#ramp_database.model.WorkflowElementType.__init__">(ramp_database.model.WorkflowElementType method)</a>
 </li>
+        <li><a href="generated/ramp_engine.aws.AWSWorker.html#ramp_engine.aws.AWSWorker.__init__">(ramp_engine.aws.AWSWorker method)</a>
+</li>
         <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.__init__">(ramp_engine.base.BaseWorker method)</a>
 </li>
         <li><a href="generated/ramp_engine.dispatcher.Dispatcher.html#ramp_engine.dispatcher.Dispatcher.__init__">(ramp_engine.dispatcher.Dispatcher method)</a>
@@ -332,6 +334,8 @@
 </li>
       <li><a href="generated/ramp_frontend.forms.AskForEventForm.html#ramp_frontend.forms.AskForEventForm.Meta">AskForEventForm.Meta (class in ramp_frontend.forms)</a>
 </li>
+      <li><a href="generated/ramp_engine.aws.AWSWorker.html#ramp_engine.aws.AWSWorker">AWSWorker (class in ramp_engine.aws)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -404,9 +408,11 @@
 </li>
       <li><a href="generated/ramp_engine.dispatcher.Dispatcher.html#ramp_engine.dispatcher.Dispatcher.collect_result">collect_result() (ramp_engine.dispatcher.Dispatcher method)</a>
 </li>
-      <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.collect_results">collect_results() (ramp_engine.base.BaseWorker method)</a>
+      <li><a href="generated/ramp_engine.aws.AWSWorker.html#ramp_engine.aws.AWSWorker.collect_results">collect_results() (ramp_engine.aws.AWSWorker method)</a>
 
       <ul>
+        <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.collect_results">(ramp_engine.base.BaseWorker method)</a>
+</li>
         <li><a href="generated/ramp_engine.local.CondaEnvWorker.html#ramp_engine.local.CondaEnvWorker.collect_results">(ramp_engine.local.CondaEnvWorker method)</a>
 </li>
       </ul></li>
@@ -418,10 +424,10 @@
 </li>
       <li><a href="generated/ramp_database.model.Event.html#ramp_database.model.Event.combined_foldwise_valid_score_str">combined_foldwise_valid_score_str (ramp_database.model.Event attribute)</a>
 </li>
-      <li><a href="generated/ramp_frontend.views.leaderboard.competition_leaderboard.html#ramp_frontend.views.leaderboard.competition_leaderboard">competition_leaderboard() (in module ramp_frontend.views.leaderboard)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_frontend.views.leaderboard.competition_leaderboard.html#ramp_frontend.views.leaderboard.competition_leaderboard">competition_leaderboard() (in module ramp_frontend.views.leaderboard)</a>
+</li>
       <li><a href="generated/ramp_database.model.SubmissionOnCVFold.html#ramp_database.model.SubmissionOnCVFold.compute_test_scores">compute_test_scores() (ramp_database.model.SubmissionOnCVFold method)</a>
 </li>
       <li><a href="generated/ramp_database.model.SubmissionOnCVFold.html#ramp_database.model.SubmissionOnCVFold.compute_train_scores">compute_train_scores() (ramp_database.model.SubmissionOnCVFold method)</a>
@@ -780,17 +786,21 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.launch">launch() (ramp_engine.base.BaseWorker method)</a>
+      <li><a href="generated/ramp_engine.aws.AWSWorker.html#ramp_engine.aws.AWSWorker.launch">launch() (ramp_engine.aws.AWSWorker method)</a>
 
       <ul>
+        <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.launch">(ramp_engine.base.BaseWorker method)</a>
+</li>
         <li><a href="generated/ramp_engine.dispatcher.Dispatcher.html#ramp_engine.dispatcher.Dispatcher.launch">(ramp_engine.dispatcher.Dispatcher method)</a>
 </li>
         <li><a href="generated/ramp_engine.local.CondaEnvWorker.html#ramp_engine.local.CondaEnvWorker.launch">(ramp_engine.local.CondaEnvWorker method)</a>
 </li>
       </ul></li>
-      <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.launch_submission">launch_submission() (ramp_engine.base.BaseWorker method)</a>
+      <li><a href="generated/ramp_engine.aws.AWSWorker.html#ramp_engine.aws.AWSWorker.launch_submission">launch_submission() (ramp_engine.aws.AWSWorker method)</a>
 
       <ul>
+        <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.launch_submission">(ramp_engine.base.BaseWorker method)</a>
+</li>
         <li><a href="generated/ramp_engine.local.CondaEnvWorker.html#ramp_engine.local.CondaEnvWorker.launch_submission">(ramp_engine.local.CondaEnvWorker method)</a>
 </li>
       </ul></li>
@@ -798,14 +808,14 @@
 </li>
       <li><a href="generated/ramp_frontend.views.leaderboard.leaderboard.html#ramp_frontend.views.leaderboard.leaderboard">leaderboard() (in module ramp_frontend.views.leaderboard)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.model.Submission.html#ramp_database.model.Submission.link">link (ramp_database.model.Submission attribute)</a>
 
       <ul>
         <li><a href="generated/ramp_database.model.SubmissionFile.html#ramp_database.model.SubmissionFile.link">(ramp_database.model.SubmissionFile attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_frontend.views.auth.load_user.html#ramp_frontend.views.auth.load_user">load_user() (in module ramp_frontend.views.auth)</a>
 </li>
       <li><a href="generated/ramp_frontend.testing.login.html#ramp_frontend.testing.login">login() (in module ramp_frontend.testing)</a>
@@ -1190,9 +1200,11 @@
 </li>
       <li><a href="generated/ramp_database.tools.user.set_user_by_instance.html#ramp_database.tools.user.set_user_by_instance">set_user_by_instance() (in module ramp_database.tools.user)</a>
 </li>
-      <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.setup">setup() (ramp_engine.base.BaseWorker method)</a>
+      <li><a href="generated/ramp_engine.aws.AWSWorker.html#ramp_engine.aws.AWSWorker.setup">setup() (ramp_engine.aws.AWSWorker method)</a>
 
       <ul>
+        <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.setup">(ramp_engine.base.BaseWorker method)</a>
+</li>
         <li><a href="generated/ramp_engine.local.CondaEnvWorker.html#ramp_engine.local.CondaEnvWorker.setup">(ramp_engine.local.CondaEnvWorker method)</a>
 </li>
       </ul></li>
@@ -1252,18 +1264,20 @@
         <li><a href="generated/ramp_database.model.UserInteraction.html#ramp_database.model.UserInteraction.team">(ramp_database.model.UserInteraction attribute)</a>
 </li>
       </ul></li>
-      <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.teardown">teardown() (ramp_engine.base.BaseWorker method)</a>
+      <li><a href="generated/ramp_engine.aws.AWSWorker.html#ramp_engine.aws.AWSWorker.teardown">teardown() (ramp_engine.aws.AWSWorker method)</a>
 
       <ul>
+        <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.teardown">(ramp_engine.base.BaseWorker method)</a>
+</li>
         <li><a href="generated/ramp_engine.local.CondaEnvWorker.html#ramp_engine.local.CondaEnvWorker.teardown">(ramp_engine.local.CondaEnvWorker method)</a>
 </li>
       </ul></li>
       <li><a href="generated/ramp_database.model.SubmissionOnCVFold.html#ramp_database.model.SubmissionOnCVFold.test_predictions">test_predictions (ramp_database.model.SubmissionOnCVFold attribute)</a>
 </li>
-      <li><a href="generated/ramp_database.model.SubmissionScore.html#ramp_database.model.SubmissionScore.test_score_cv_mean">test_score_cv_mean (ramp_database.model.SubmissionScore attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_database.model.SubmissionScore.html#ramp_database.model.SubmissionScore.test_score_cv_mean">test_score_cv_mean (ramp_database.model.SubmissionScore attribute)</a>
+</li>
       <li><a href="generated/ramp_database.model.SubmissionScore.html#ramp_database.model.SubmissionScore.test_score_cv_std">test_score_cv_std (ramp_database.model.SubmissionScore attribute)</a>
 </li>
       <li><a href="generated/ramp_database.model.Problem.html#ramp_database.model.Problem.title">title (ramp_database.model.Problem attribute)</a>
