Updating the docs in dev/ for branch: master, commit d576c9b8ee8833c2b798706d36050076f8da8a24 [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -290,6 +290,8 @@
       <ul>
         <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-event-config">ramp-launch-dispatcher command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-launch-worker-event-config">ramp-launch-worker command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-event-config">ramp-setup-deploy-event command line option</a>
 </li>
       </ul></li>
@@ -320,6 +322,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-problem-force">ramp-database-add-problem command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --hidden-notes &lt;hidden_notes&gt;
 
@@ -327,8 +331,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-user-hidden-notes">ramp-database-add-user command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --host &lt;host&gt;
 
@@ -1531,8 +1533,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-leaderboards-event">--event &lt;event&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-user-leaderboards command line option
 
@@ -1544,6 +1544,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-user-leaderboards-user">--user &lt;user&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-frontend-test-launch command line option
 
@@ -1575,6 +1577,8 @@
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-launch-worker-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-launch-worker-event-config">--event-config &lt;event_config&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-launch-worker-submission">--submission &lt;submission&gt;</a>
 </li>
