Updating the docs in dev/ for branch: master, commit 9b7a144aa080fb8d64203abc0806503a5dbdffc9 [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -714,7 +714,7 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/ramp_utils.password.check_password.html#ramp_utils.password.check_password">check_password() (in module ramp_utils.password)</a>
+      <li><a href="generated/ramp_utils.utils.check_password.html#ramp_utils.utils.check_password">check_password() (in module ramp_utils.utils)</a>
 </li>
       <li><a href="generated/ramp_frontend.forms.CodeForm.html#ramp_frontend.forms.CodeForm">CodeForm (class in ramp_frontend.forms)</a>
 </li>
@@ -796,8 +796,6 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/ramp_utils.string_encoding.encode_string.html#ramp_utils.string_encoding.encode_string">encode_string() (in module ramp_utils.string_encoding)</a>
-</li>
       <li><a href="generated/ramp_database.model.Event.html#ramp_database.model.Event">Event (class in ramp_database.model)</a>
 </li>
       <li><a href="generated/ramp_database.model.Submission.html#ramp_database.model.Submission.event">event (ramp_database.model.Submission attribute)</a>
@@ -810,10 +808,10 @@
 </li>
       <li><a href="generated/ramp_database.model.EventAdmin.html#ramp_database.model.EventAdmin">EventAdmin (class in ramp_database.model)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.model.EventScoreType.html#ramp_database.model.EventScoreType">EventScoreType (class in ramp_database.model)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.model.EventTeam.html#ramp_database.model.EventTeam">EventTeam (class in ramp_database.model)</a>
 </li>
       <li><a href="generated/ramp_frontend.forms.EventUpdateProfileForm.html#ramp_frontend.forms.EventUpdateProfileForm">EventUpdateProfileForm (class in ramp_frontend.forms)</a>
@@ -960,7 +958,7 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/ramp_utils.password.hash_password.html#ramp_utils.password.hash_password">hash_password() (in module ramp_utils.password)</a>
+      <li><a href="generated/ramp_utils.utils.hash_password.html#ramp_utils.utils.hash_password">hash_password() (in module ramp_utils.utils)</a>
 </li>
       <li><a href="generated/ramp_frontend.forms.AskForEventForm.html#ramp_frontend.forms.AskForEventForm.hidden_tag">hidden_tag() (ramp_frontend.forms.AskForEventForm method)</a>
 
