Updating the docs in dev/ for branch: master, commit 7f5f015cefa01840f4dcddf770931f6306405482 [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -547,6 +547,8 @@
 </li>
         <li><a href="generated/ramp_database.model.SubmissionScore.html#ramp_database.model.SubmissionScore.__init__">(ramp_database.model.SubmissionScore method)</a>
 </li>
+        <li><a href="generated/ramp_database.model.SubmissionScoreOnCVFold.html#ramp_database.model.SubmissionScoreOnCVFold.__init__">(ramp_database.model.SubmissionScoreOnCVFold method)</a>
+</li>
         <li><a href="generated/ramp_database.model.SubmissionSimilarity.html#ramp_database.model.SubmissionSimilarity.__init__">(ramp_database.model.SubmissionSimilarity method)</a>
 </li>
         <li><a href="generated/ramp_database.model.Team.html#ramp_database.model.Team.__init__">(ramp_database.model.Team method)</a>
@@ -714,7 +716,7 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/ramp_utils.utils.check_password.html#ramp_utils.utils.check_password">check_password() (in module ramp_utils.utils)</a>
+      <li><a href="generated/ramp_database.utils.check_password.html#ramp_database.utils.check_password">check_password() (in module ramp_database.utils)</a>
 </li>
       <li><a href="generated/ramp_frontend.forms.CodeForm.html#ramp_frontend.forms.CodeForm">CodeForm (class in ramp_frontend.forms)</a>
 </li>
@@ -806,12 +808,14 @@
       </ul></li>
       <li><a href="generated/ramp_frontend.views.ramp.event_plots.html#ramp_frontend.views.ramp.event_plots">event_plots() (in module ramp_frontend.views.ramp)</a>
 </li>
-      <li><a href="generated/ramp_database.model.EventAdmin.html#ramp_database.model.EventAdmin">EventAdmin (class in ramp_database.model)</a>
+      <li><a href="generated/ramp_database.model.SubmissionScoreOnCVFold.html#ramp_database.model.SubmissionScoreOnCVFold.event_score_type">event_score_type (ramp_database.model.SubmissionScoreOnCVFold attribute)</a>
 </li>
-      <li><a href="generated/ramp_database.model.EventScoreType.html#ramp_database.model.EventScoreType">EventScoreType (class in ramp_database.model)</a>
+      <li><a href="generated/ramp_database.model.EventAdmin.html#ramp_database.model.EventAdmin">EventAdmin (class in ramp_database.model)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_database.model.EventScoreType.html#ramp_database.model.EventScoreType">EventScoreType (class in ramp_database.model)</a>
+</li>
       <li><a href="generated/ramp_database.model.EventTeam.html#ramp_database.model.EventTeam">EventTeam (class in ramp_database.model)</a>
 </li>
       <li><a href="generated/ramp_frontend.forms.EventUpdateProfileForm.html#ramp_frontend.forms.EventUpdateProfileForm">EventUpdateProfileForm (class in ramp_frontend.forms)</a>
@@ -958,7 +962,7 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/ramp_utils.utils.hash_password.html#ramp_utils.utils.hash_password">hash_password() (in module ramp_utils.utils)</a>
+      <li><a href="generated/ramp_database.utils.hash_password.html#ramp_database.utils.hash_password">hash_password() (in module ramp_database.utils)</a>
 </li>
       <li><a href="generated/ramp_frontend.forms.AskForEventForm.html#ramp_frontend.forms.AskForEventForm.hidden_tag">hidden_tag() (ramp_frontend.forms.AskForEventForm method)</a>
 
@@ -1193,7 +1197,11 @@
       <li><a href="generated/ramp_database.model.Event.html#ramp_database.model.Event.n_participants">n_participants (ramp_database.model.Event attribute)</a>
 </li>
       <li><a href="generated/ramp_database.model.SubmissionFile.html#ramp_database.model.SubmissionFile.name">name (ramp_database.model.SubmissionFile attribute)</a>
+
+      <ul>
+        <li><a href="generated/ramp_database.model.SubmissionScoreOnCVFold.html#ramp_database.model.SubmissionScoreOnCVFold.name">(ramp_database.model.SubmissionScoreOnCVFold attribute)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.model.Submission.html#ramp_database.model.Submission.name_with_link">name_with_link (ramp_database.model.Submission attribute)</a>
@@ -1364,6 +1372,8 @@
         <li><a href="generated/ramp_database.model.SubmissionOnCVFold.html#ramp_database.model.SubmissionOnCVFold.query_class">(ramp_database.model.SubmissionOnCVFold attribute)</a>
 </li>
         <li><a href="generated/ramp_database.model.SubmissionScore.html#ramp_database.model.SubmissionScore.query_class">(ramp_database.model.SubmissionScore attribute)</a>
+</li>
+        <li><a href="generated/ramp_database.model.SubmissionScoreOnCVFold.html#ramp_database.model.SubmissionScoreOnCVFold.query_class">(ramp_database.model.SubmissionScoreOnCVFold attribute)</a>
 </li>
         <li><a href="generated/ramp_database.model.SubmissionSimilarity.html#ramp_database.model.SubmissionSimilarity.query_class">(ramp_database.model.SubmissionSimilarity attribute)</a>
 </li>
@@ -1687,6 +1697,8 @@
       <ul>
         <li><a href="generated/ramp_database.model.SubmissionScore.html#ramp_database.model.SubmissionScore.score_function">(ramp_database.model.SubmissionScore attribute)</a>
 </li>
+        <li><a href="generated/ramp_database.model.SubmissionScoreOnCVFold.html#ramp_database.model.SubmissionScoreOnCVFold.score_function">(ramp_database.model.SubmissionScoreOnCVFold attribute)</a>
+</li>
       </ul></li>
       <li><a href="generated/ramp_database.model.SubmissionScore.html#ramp_database.model.SubmissionScore.score_name">score_name (ramp_database.model.SubmissionScore attribute)</a>
 </li>
@@ -1775,6 +1787,8 @@
       <li><a href="generated/ramp_database.model.SubmissionOnCVFold.html#ramp_database.model.SubmissionOnCVFold">SubmissionOnCVFold (class in ramp_database.model)</a>
 </li>
       <li><a href="generated/ramp_database.model.SubmissionScore.html#ramp_database.model.SubmissionScore">SubmissionScore (class in ramp_database.model)</a>
+</li>
+      <li><a href="generated/ramp_database.model.SubmissionScoreOnCVFold.html#ramp_database.model.SubmissionScoreOnCVFold">SubmissionScoreOnCVFold (class in ramp_database.model)</a>
 </li>
       <li><a href="generated/ramp_database.model.SubmissionSimilarity.html#ramp_database.model.SubmissionSimilarity">SubmissionSimilarity (class in ramp_database.model)</a>
 </li>
