Updating the docs in dev/ for branch: master, commit af1f61a4702ba74b320718d4043dce48045f4292 [skip ci]

--- a/dev/api.html
+++ b/dev/api.html
@@ -939,10 +939,19 @@ with the RAMP backend.</p>
 <tr class="row-odd"><td><code class="xref py py-obj docutils literal notranslate"><span class="pre">auth.logout</span></code></td>
 <td></td>
 </tr>
+<tr class="row-even"><td><code class="xref py py-obj docutils literal notranslate"><span class="pre">auth.reset_password</span></code></td>
+<td></td>
+</tr>
+<tr class="row-odd"><td><code class="xref py py-obj docutils literal notranslate"><span class="pre">auth.reset_with_token</span></code></td>
+<td></td>
+</tr>
 <tr class="row-even"><td><code class="xref py py-obj docutils literal notranslate"><span class="pre">auth.sign_up</span></code></td>
 <td></td>
 </tr>
 <tr class="row-odd"><td><code class="xref py py-obj docutils literal notranslate"><span class="pre">auth.update_profile</span></code></td>
+<td></td>
+</tr>
+<tr class="row-even"><td><code class="xref py py-obj docutils literal notranslate"><span class="pre">auth.user_confirm_email</span></code></td>
 <td></td>
 </tr>
 </tbody>
