--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -322,8 +322,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-problem-force">ramp-database-add-problem command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --hidden-notes &lt;hidden_notes&gt;
 
@@ -331,6 +329,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-user-hidden-notes">ramp-database-add-user command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --host &lt;host&gt;
 
@@ -376,10 +376,17 @@
 </li>
       </ul></li>
       <li>
-    --n-worker &lt;n_worker&gt;
+    --n-threads &lt;n_threads&gt;
 
       <ul>
-        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-n-worker">ramp-launch-dispatcher command line option</a>
+        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-n-threads">ramp-launch-dispatcher command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --n-workers &lt;n_workers&gt;
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-n-workers">ramp-launch-dispatcher command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1565,7 +1572,9 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-hunger-policy">--hunger-policy &lt;hunger_policy&gt;</a>
 </li>
-        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-n-worker">--n-worker &lt;n_worker&gt;</a>
+        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-n-threads">--n-threads &lt;n_threads&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-n-workers">--n-workers &lt;n_workers&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-v">-v, --verbose</a>
 </li>
