--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -197,7 +197,7 @@
 </li>
       </ul></li>
       <li>
-    --cloning, --no-cloning
+    --cloning
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-cloning">ramp-setup-deploy-event command line option</a>
@@ -329,8 +329,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-user-hidden-notes">ramp-database-add-user command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --host &lt;host&gt;
 
@@ -338,6 +336,8 @@
         <li><a href="cli.html#cmdoption-ramp-frontend-test-launch-host">ramp-frontend-test-launch command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --hunger-policy &lt;hunger_policy&gt;
 
@@ -394,6 +394,13 @@
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-setup-init-event-name">ramp-setup-init-event command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --no-cloning
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-cloning">ramp-setup-deploy-event command line option</a>
 </li>
       </ul></li>
       <li>
@@ -491,7 +498,16 @@
 </li>
       </ul></li>
       <li>
-    -v, --verbose
+    --verbose
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-v">ramp-launch-dispatcher command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-launch-worker-v">ramp-launch-worker command line option</a>
+</li>
+      </ul></li>
+      <li>
+    -v
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-v">ramp-launch-dispatcher command line option</a>
@@ -1574,7 +1590,9 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-n-workers">--n-workers &lt;n_workers&gt;</a>
 </li>
-        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-v">-v, --verbose</a>
+        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-v">--verbose</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-v">-v</a>
 </li>
       </ul></li>
       <li>
@@ -1587,20 +1605,24 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-launch-worker-submission">--submission &lt;submission&gt;</a>
 </li>
-        <li><a href="cli.html#cmdoption-ramp-launch-worker-v">-v, --verbose</a>
+        <li><a href="cli.html#cmdoption-ramp-launch-worker-v">--verbose</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-launch-worker-v">-v</a>
 </li>
       </ul></li>
       <li>
     ramp-setup-deploy-event command line option
 
       <ul>
-        <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-cloning">--cloning, --no-cloning</a>
+        <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-cloning">--cloning</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-config">--config &lt;config&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-event-config">--event-config &lt;event_config&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-force">--force</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-cloning">--no-cloning</a>
 </li>
       </ul></li>
       <li>
