Updating the docs in dev/ for branch: master, commit a2d2fe0bf073c8f67bde4847a6f440fc42ff63b3 [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -222,6 +222,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-config">ramp-database-get-submissions-by-state command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-config">ramp-database-make-user-admin command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-set-submission-state-config">ramp-database-set-submission-state command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-sign-up-team-config">ramp-database-sign-up-team command line option</a>
@@ -374,6 +376,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-user-login">ramp-database-add-user command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-login">ramp-database-approve-user command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-login">ramp-database-make-user-admin command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1511,6 +1515,15 @@
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-event">--event &lt;event&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-state">--state &lt;state&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    ramp-database-make-user-admin command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-login">--login &lt;login&gt;</a>
 </li>
       </ul></li>
       <li>
