Updating the docs in dev/ for branch: master, commit 11ec1f524fe2ca44ea433b9ac50e53393b302a60 [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -1174,6 +1174,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_database.tools.user.make_user_admin.html#ramp_database.tools.user.make_user_admin">make_user_admin() (in module ramp_database.tools.user)</a>
+</li>
       <li><a href="generated/ramp_database.model.WorkflowElement.html#ramp_database.model.WorkflowElement.max_size">max_size() (ramp_database.model.WorkflowElement property)</a>
 
       <ul>
