Updating the docs in dev/ for branch: master, commit 794845463bef40dc923bd93be40abbad46c62010 [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -196,6 +196,8 @@
       <ul>
         <li><a href="cli.html#cmdoption-ramp-database-add-user-access-level">ramp-database-add-user command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-set-user-access-level-access-level">ramp-database-set-user-access-level command line option</a>
+</li>
       </ul></li>
       <li>
     --cloning
@@ -225,6 +227,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-config">ramp-database-make-user-admin command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-set-submission-state-config">ramp-database-set-submission-state command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-set-user-access-level-config">ramp-database-set-user-access-level command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-sign-up-team-config">ramp-database-sign-up-team command line option</a>
 </li>
@@ -378,6 +382,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-login">ramp-database-approve-user command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-login">ramp-database-make-user-admin command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-set-user-access-level-login">ramp-database-set-user-access-level command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1540,6 +1546,17 @@
 </li>
       </ul></li>
       <li>
+    ramp-database-set-user-access-level command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-set-user-access-level-access-level">--access-level &lt;access_level&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-set-user-access-level-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-set-user-access-level-login">--login &lt;login&gt;</a>
+</li>
+      </ul></li>
+      <li>
     ramp-database-sign-up-team command line option
 
       <ul>
@@ -1568,6 +1585,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-leaderboards-event">--event &lt;event&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-user-leaderboards command line option
 
@@ -1579,8 +1598,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-user-leaderboards-user">--user &lt;user&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-frontend-test-launch command line option
 
@@ -1782,6 +1799,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.tools.submission.set_time.html#ramp_database.tools.submission.set_time">set_time() (in module ramp_database.tools.submission)</a>
+</li>
+      <li><a href="generated/ramp_database.tools.user.set_user_access_level.html#ramp_database.tools.user.set_user_access_level">set_user_access_level() (in module ramp_database.tools.user)</a>
 </li>
       <li><a href="generated/ramp_database.tools.user.set_user_by_instance.html#ramp_database.tools.user.set_user_by_instance">set_user_by_instance() (in module ramp_database.tools.user)</a>
 </li>
