Updating the docs in dev/ for branch: master, commit d3b4e00f88f039a241811226f7ef94077dbad338 [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -814,13 +814,15 @@
 </li>
       <li><a href="generated/ramp_database.tools.event.delete_event.html#ramp_database.tools.event.delete_event">delete_event() (in module ramp_database.tools.event)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.tools.event.delete_problem.html#ramp_database.tools.event.delete_problem">delete_problem() (in module ramp_database.tools.event)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.tools.event.delete_submission_similarity.html#ramp_database.tools.event.delete_submission_similarity">delete_submission_similarity() (in module ramp_database.tools.event)</a>
 </li>
       <li><a href="generated/ramp_utils.deploy.deploy_ramp_event.html#ramp_utils.deploy.deploy_ramp_event">deploy_ramp_event() (in module ramp_utils.deploy)</a>
+</li>
+      <li><a href="generated/ramp_database.tools.frontend.did_user_signed_up.html#ramp_database.tools.frontend.did_user_signed_up">did_user_signed_up() (in module ramp_database.tools.frontend)</a>
 </li>
       <li><a href="generated/ramp_engine.dispatcher.Dispatcher.html#ramp_engine.dispatcher.Dispatcher">Dispatcher (class in ramp_engine.dispatcher)</a>
 </li>
