Updating the docs in dev/ for branch: master, commit 7e5eb799a8470737d99e537bdad1ab546715a1ed [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -814,15 +814,13 @@
 </li>
       <li><a href="generated/ramp_database.tools.event.delete_event.html#ramp_database.tools.event.delete_event">delete_event() (in module ramp_database.tools.event)</a>
 </li>
-      <li><a href="generated/ramp_database.tools.event.delete_problem.html#ramp_database.tools.event.delete_problem">delete_problem() (in module ramp_database.tools.event)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_database.tools.event.delete_problem.html#ramp_database.tools.event.delete_problem">delete_problem() (in module ramp_database.tools.event)</a>
+</li>
       <li><a href="generated/ramp_database.tools.event.delete_submission_similarity.html#ramp_database.tools.event.delete_submission_similarity">delete_submission_similarity() (in module ramp_database.tools.event)</a>
 </li>
       <li><a href="generated/ramp_utils.deploy.deploy_ramp_event.html#ramp_utils.deploy.deploy_ramp_event">deploy_ramp_event() (in module ramp_utils.deploy)</a>
-</li>
-      <li><a href="generated/ramp_database.tools.frontend.did_user_signed_up.html#ramp_database.tools.frontend.did_user_signed_up">did_user_signed_up() (in module ramp_database.tools.frontend)</a>
 </li>
       <li><a href="generated/ramp_engine.dispatcher.Dispatcher.html#ramp_engine.dispatcher.Dispatcher">Dispatcher (class in ramp_engine.dispatcher)</a>
 </li>
@@ -1072,10 +1070,10 @@
 </li>
       <li><a href="generated/ramp_database.model.Submission.html#ramp_database.model.Submission.is_not_sandbox">is_not_sandbox (ramp_database.model.Submission attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.model.Event.html#ramp_database.model.Event.is_open">is_open() (ramp_database.model.Event property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.model.Submission.html#ramp_database.model.Submission.is_private_leaderboard">is_private_leaderboard (ramp_database.model.Submission attribute)</a>
 </li>
       <li><a href="generated/ramp_database.model.Submission.html#ramp_database.model.Submission.is_public_leaderboard">is_public_leaderboard (ramp_database.model.Submission attribute)</a>
@@ -1111,6 +1109,8 @@
       <li><a href="generated/ramp_database.model.SubmissionOnCVFold.html#ramp_database.model.SubmissionOnCVFold.is_tested">is_tested (ramp_database.model.SubmissionOnCVFold attribute)</a>
 </li>
       <li><a href="generated/ramp_database.model.SubmissionOnCVFold.html#ramp_database.model.SubmissionOnCVFold.is_trained">is_trained (ramp_database.model.SubmissionOnCVFold attribute)</a>
+</li>
+      <li><a href="generated/ramp_database.tools.frontend.is_user_sign_up_requested.html#ramp_database.tools.frontend.is_user_sign_up_requested">is_user_sign_up_requested() (in module ramp_database.tools.frontend)</a>
 </li>
       <li><a href="generated/ramp_database.tools.frontend.is_user_signed_up.html#ramp_database.tools.frontend.is_user_signed_up">is_user_signed_up() (in module ramp_database.tools.frontend)</a>
 </li>
