--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -222,6 +222,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-config">ramp-database-approve-user command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-user-config">ramp-database-delete-user command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-config">ramp-database-get-submissions-by-state command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-config">ramp-database-make-user-admin command line option</a>
@@ -380,6 +382,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-user-login">ramp-database-add-user command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-login">ramp-database-approve-user command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-user-login">ramp-database-delete-user command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-login">ramp-database-make-user-admin command line option</a>
 </li>
@@ -814,11 +818,13 @@
 </li>
       <li><a href="generated/ramp_database.tools.event.delete_event.html#ramp_database.tools.event.delete_event">delete_event() (in module ramp_database.tools.event)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.tools.event.delete_problem.html#ramp_database.tools.event.delete_problem">delete_problem() (in module ramp_database.tools.event)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.tools.event.delete_submission_similarity.html#ramp_database.tools.event.delete_submission_similarity">delete_submission_similarity() (in module ramp_database.tools.event)</a>
+</li>
+      <li><a href="generated/ramp_database.tools.user.delete_user.html#ramp_database.tools.user.delete_user">delete_user() (in module ramp_database.tools.user)</a>
 </li>
       <li><a href="generated/ramp_utils.deploy.deploy_ramp_event.html#ramp_utils.deploy.deploy_ramp_event">deploy_ramp_event() (in module ramp_utils.deploy)</a>
 </li>
@@ -1514,6 +1520,15 @@
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-config">--config &lt;config&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-login">--login &lt;login&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    ramp-database-delete-user command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-user-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-user-login">--login &lt;login&gt;</a>
 </li>
       </ul></li>
       <li>
