Updating the docs in dev/ for branch: master, commit 799e931af00d936712bafe27ef107d3afecaf333 [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -222,6 +222,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-config">ramp-database-approve-user command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-config">ramp-database-delete-event-team command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-user-config">ramp-database-delete-user command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-config">ramp-database-get-submissions-by-state command line option</a>
@@ -281,6 +283,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-event-admin-event">ramp-database-add-event-admin command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-add-submission-event">ramp-database-add-submission command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-event">ramp-database-delete-event-team command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-event">ramp-database-get-submissions-by-state command line option</a>
 </li>
@@ -492,6 +496,8 @@
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-database-add-submission-team">ramp-database-add-submission command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-team">ramp-database-delete-event-team command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-sign-up-team-team">ramp-database-sign-up-team command line option</a>
 </li>
@@ -818,10 +824,12 @@
 </li>
       <li><a href="generated/ramp_database.tools.event.delete_event.html#ramp_database.tools.event.delete_event">delete_event() (in module ramp_database.tools.event)</a>
 </li>
-      <li><a href="generated/ramp_database.tools.event.delete_problem.html#ramp_database.tools.event.delete_problem">delete_problem() (in module ramp_database.tools.event)</a>
+      <li><a href="generated/ramp_database.tools.team.delete_event_team.html#ramp_database.tools.team.delete_event_team">delete_event_team() (in module ramp_database.tools.team)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_database.tools.event.delete_problem.html#ramp_database.tools.event.delete_problem">delete_problem() (in module ramp_database.tools.event)</a>
+</li>
       <li><a href="generated/ramp_database.tools.event.delete_submission_similarity.html#ramp_database.tools.event.delete_submission_similarity">delete_submission_similarity() (in module ramp_database.tools.event)</a>
 </li>
       <li><a href="generated/ramp_database.tools.user.delete_user.html#ramp_database.tools.user.delete_user">delete_user() (in module ramp_database.tools.user)</a>
@@ -1523,6 +1531,17 @@
 </li>
       </ul></li>
       <li>
+    ramp-database-delete-event-team command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-event">--event &lt;event&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-team">--team &lt;team&gt;</a>
+</li>
+      </ul></li>
+      <li>
     ramp-database-delete-user command line option
 
       <ul>
@@ -1593,6 +1612,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-all-users-leaderboards-event">--event &lt;event&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-leaderboards command line option
 
@@ -1602,8 +1623,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-leaderboards-event">--event &lt;event&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-user-leaderboards command line option
 
