Updating the docs in dev/ for branch: master, commit 6792e554c2da69727647b4904b513a78e7d0f919 [skip ci]

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -763,6 +763,14 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.utils.check_password.html#ramp_database.utils.check_password">check_password() (in module ramp_database.utils)</a>
 </li>
+      <li><a href="generated/ramp_engine.aws.AWSWorker.html#ramp_engine.aws.AWSWorker.check_timeout">check_timeout() (ramp_engine.aws.AWSWorker method)</a>
+
+      <ul>
+        <li><a href="generated/ramp_engine.base.BaseWorker.html#ramp_engine.base.BaseWorker.check_timeout">(ramp_engine.base.BaseWorker method)</a>
+</li>
+        <li><a href="generated/ramp_engine.local.CondaEnvWorker.html#ramp_engine.local.CondaEnvWorker.check_timeout">(ramp_engine.local.CondaEnvWorker method)</a>
+</li>
+      </ul></li>
       <li><a href="generated/ramp_frontend.forms.CodeForm.html#ramp_frontend.forms.CodeForm">CodeForm (class in ramp_frontend.forms)</a>
 </li>
       <li><a href="generated/ramp_frontend.forms.CodeForm.html#ramp_frontend.forms.CodeForm.Meta">CodeForm.Meta (class in ramp_frontend.forms)</a>
@@ -783,10 +791,10 @@
 </li>
       <li><a href="generated/ramp_database.model.Event.html#ramp_database.model.Event.combined_foldwise_test_score_str">combined_foldwise_test_score_str() (ramp_database.model.Event property)</a>
 </li>
-      <li><a href="generated/ramp_database.model.Event.html#ramp_database.model.Event.combined_foldwise_valid_score_str">combined_foldwise_valid_score_str() (ramp_database.model.Event property)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_database.model.Event.html#ramp_database.model.Event.combined_foldwise_valid_score_str">combined_foldwise_valid_score_str() (ramp_database.model.Event property)</a>
+</li>
       <li><a href="generated/ramp_frontend.views.leaderboard.competition_leaderboard.html#ramp_frontend.views.leaderboard.competition_leaderboard">competition_leaderboard() (in module ramp_frontend.views.leaderboard)</a>
 </li>
       <li><a href="generated/ramp_database.model.SubmissionOnCVFold.html#ramp_database.model.SubmissionOnCVFold.compute_test_scores">compute_test_scores() (ramp_database.model.SubmissionOnCVFold method)</a>
