Updating the docs in dev/ for branch: master, commit 8579dc4be053a4d4e60d38a6bea27a6f92dbacc9 [skip ci]

--- a/dev/personalize.html
+++ b/dev/personalize.html
@@ -188,11 +188,11 @@ directory:</p>
 <p>Your images must have one of the following extensions:</p>
 <ul class="simple">
 <li><p>.png</p></li>
-<li><p>.jpg’ (.jpeg)</p></li>
+<li><p>.jpg (.jpeg)</p></li>
 <li><p>.gif</p></li>
 <li><p>.svg</p></li>
 </ul>
-<p>When you reload your RAMP page the new <code class="docutils literal notranslate"><span class="pre">Powered</span> <span class="pre">by</span></code> section should appear</p>
+<p>When you reload your RAMP page the new <code class="docutils literal notranslate"><span class="pre">Powered</span> <span class="pre">by</span></code> section should appear.</p>
 </div>
 </div>
 
