--- a/index.html
+++ b/index.html
@@ -103,6 +103,68 @@
     <div class="container-fluid app-content-a" id="dev">
         <div class="container">
             <div class="row">
+                <div class="col-md-12">
+                    <h2 class="text-center app-content-header">Install RAMP bundle</h2>
+                    <p class="text-center app-content-description font-small">
+                    All RAMP packages are available on PyPI and can be easily installed using <code>pip</code>
+                    <br />
+                    <br />
+                    <code>$ pip install ramp-workflow ramp-frontend ramp-database ramp-engine ramp-utils</code>
+                    </p>
+                    <br />
+                    <p>
+                    The RAMP ecosystem contains two organizations and two
+                    libraries. The purpose of the bundle is to define, build,
+                    manage, and optimize data analytics workflows, typically on
+                    the top of open source machine learning libraries like
+                    pandas, scikit-learn, and keras. The bundle consists of
+                    </p>
+                    <table class="table">
+                    <thead class="thead-light">
+                        <tr>
+                        <th scope="col">Library/Organisation</th>
+                        <th scope="col">Purpose</th>
+                        <th scope="col">Publicly available</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                        <th scope="row"><a href="https://github.com/paris-saclay-cds/ramp-workflow">ramp-workflow</a></th>
+                        <td>A set of reusable tools and scripts to define score
+                        types (metrics), workflow elements, prediction types
+                        and data connectors.</td>
+                        <td><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></td>
+                        </tr>
+                        <tr>
+                        <th scope="row"><a href="https://github.com/paris-saclay-cds/ramp-board">ramp-board</a></th>
+                        <td>A library managing the frontend and the database of
+                        the RAMP platform.</td>
+                        <td><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></td>
+                        </tr>
+                        <tr>
+                        <th scope="row"><a href="https://github.com/ramp-data">ramp-data</a></th>
+                        <td>An organization containing data sets on which
+                        workflows are trained and evaluated.</td>
+                        <td><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></td>
+                        </tr>
+                        <th scope="row"><a href="https://github.com/ramp-kits">ramp-kits</a></th>
+                        <td>An organization containing starting kits that use
+                        tools from ramp-workflow to implement a first valid
+                        (tested) workflow.</td>
+                        <td><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></td>
+                        </tr>
+                    </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <hr align="center" width="50%">
+
+    <div class="container-fluid app-content-a" id="dev">
+        <div class="container">
+            <div class="row">
                 <h2 class="text-center app-content-header">Developed by:</h2>
                 <br>
                 <div class="col-md-12">
