Updating the docs in ramp-board/dev/ for branch: master, commit 56f800dffcb5cd0aa97563fc0f368a52c2583b04 [skip ci]

--- a/ramp-board/dev/create_ramp_event.html
+++ b/ramp-board/dev/create_ramp_event.html
@@ -209,6 +209,10 @@ specific to the event.</p>
 <span class="n">worker</span><span class="p">:</span>
     <span class="n">worker_type</span><span class="p">:</span> <span class="n">conda</span>
     <span class="n">conda_env</span><span class="p">:</span> <span class="n">ramp</span><span class="o">-</span><span class="n">iris</span>
+<span class="n">dispatcher</span><span class="p">:</span>
+    <span class="n">hunger_policy</span><span class="p">:</span> <span class="n">sleep</span>
+    <span class="n">n_workers</span><span class="p">:</span> <span class="mi">2</span>
+    <span class="n">n_threads</span><span class="p">:</span> <span class="mi">2</span>
 </pre></div>
 </div>
 <div class="admonition note">
